--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -11,7 +11,7 @@
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Хлопковые горы Харькова">
-    <meta property="og:description" content="Хлопковые горы Харькова, Белоснежные горы Харькова Печенежское водохранилище Экскурсия в Харьков Новый Поворот Меловые горы Харьков из Запорожья Кицевская пустыня Голубая гладь Бескрайняя пустыня " />
+    <meta property="og:description" content="Самые крутые пейзажи! |  Кицевская пустыня | Печенежское водохранилище | Голубая гладь " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Kharkov.html" />
     <meta property="og:image" src="images/Kharkov-max.jpg">
