--- a/packages.html
+++ b/packages.html
@@ -391,7 +391,7 @@
                 </div>
                 <!--  //Карпаты  -->
 
-                <!--  Kharkov -->
+                <!--  Харьков -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-Kharkov.html">
@@ -404,14 +404,14 @@
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Kharkov.html">Хлопковые Горы Харькова</a>
                         </h5>
-                        <p class="">Харьков из Запорожья. Экскурсия в Харьков.</p>
+                        <p class="">Харьков из Запорожья...</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 5 Июня 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Kharkov  -->
+                <!--  //Харьков  -->
 
                 <!--  Грузия -->
                 <div class="col-lg-3 col-sm-6 mb-5">
