--- a/page-Georgia.html
+++ b/page-Georgia.html
@@ -105,7 +105,7 @@
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
-                     <li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                      <li class="breadcrumb-item active" aria-current="page">Грузия</li>
                    </ol>
                 </nav>
