--- a/page-Stambul.html
+++ b/page-Stambul.html
@@ -47,24 +47,6 @@
         rel="stylesheet">
     <!-- //google fonts -->
 
-        <!-- Facebook Pixel Code -->
-       <!-- <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '3921253151274858');
-        fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-        /></noscript>-->
-        <!-- End Facebook Pixel Code -->
-
 </head>
 
 <body>
@@ -110,7 +92,7 @@
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                      <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
-                     <li class="breadcrumb-item"><a class="text-primary" href="packages-page-two.html">Туры</a></li>
+                     <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
                      <li class="breadcrumb-item active" aria-current="page">Стамбул - столица тюльпанов</li>
                    </ol>
                 </nav>
