--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -123,7 +123,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>8 Мая 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
@@ -210,7 +210,7 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><strong>12:00, 11.04</strong> сбор в районе острова Хортица
+                                        <p><strong>11:00, 08.05</strong> сбор в районе острова Хортица
                                             (дополнительно оповещаем всех кто записался
                                             за 2 дня до начала экскурсии).
                                             Минутка позитива и в путешествие.
@@ -223,7 +223,7 @@
                                             местах силы, получим заряд бодрости и
                                             энергии в балке молодости и узнаем много
                                             нового и неизведанного о нашем родном крае.<br />
-                                            Окончание экскурсии <strong>13:30-14:00</strong>.</p>
+                                            Окончание экскурсии <strong>13:00</strong>.</p>
                                         </p><br />
                                         <hr>
                                         <p><i>
