--- a/packages.html
+++ b/packages.html
@@ -249,7 +249,7 @@
                 </div>
                 <!--  //Львов -->
 
-                <!--  Zoo-->
+                <!--  Зоопарк Пылышенко -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
@@ -269,7 +269,7 @@
                         </ul>
                     </div>
                 </div>
-                <!--  //Zoo -->
+                <!--  //Зоопарк Пылышенко -->
 
                 <!--  Хортица -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -288,7 +288,7 @@
                         </h5>
                         <p class="">Тайны и загадки родного острова Хортица... </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>08 Мая 2021 Года</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
