--- a/index.html
+++ b/index.html
@@ -782,6 +782,13 @@
         console.log("Туры выходного дня 'Новый Поворот'");
     </script>
 
+     <script>
+window.replainSettings = { id: 'd6700dc7-24e8-42c2-ad8d-fc8f31bc18e8' };
+(function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+})('https://widget.replain.cc/dist/client.js');
+</script>
+
 </body>
 
 </html>
