--- a/packages.html
+++ b/packages.html
@@ -264,7 +264,7 @@
                         </h5>
                         <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>16 Мая</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
