--- a/packages.html
+++ b/packages.html
@@ -338,7 +338,7 @@
                             Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
