--- a/packages.html
+++ b/packages.html
@@ -192,9 +192,9 @@
                                 Яворовская Ниагара
                             </a>
                         </h5>
-                        <p class="">Читай полностью описание и бронируй!</p>
+                        <p class="">Расписание на 2021 Год.</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Апреля - 03 Мая</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>4 Дня</span></li>
                         </ul>
                     </div>
