--- a/packages.html
+++ b/packages.html
@@ -218,7 +218,7 @@
                         </h5>
                         <p class="">Экскурсия в Закарпатье с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 1-3 Мая и 8-10 Мая </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 8-10 Мая </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
