--- a/page-zoo.html
+++ b/page-zoo.html
@@ -121,7 +121,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>16 Мая</span>
                                 </li>
                             </ul>
                         </div>
