--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -126,12 +126,12 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>30 Апреля - 03 Мая 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 2021 Года</span>
                                 </li>
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                         Яворовская Ниагара
+                         Яворовская Ниагара, расписание на 2021 год.
                         </h4>
                        <p class="txt-alg-jf">
                            Яворовская Ниагара. Буковель и форелевое хозяйство. 
