--- a/index.html
+++ b/index.html
@@ -322,77 +322,77 @@
                 </div>
                 <!--  //Фестиваль воздушных шаров -->
 
-                <!--  Яворовская Ниагара -->
+                <!--  Зоопарк Пылышенко -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
-                            <img src="images/Yavorovskaya-niagara-min.jpg" alt="Яворовская Ниагара" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>4200грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>335грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html">
-                                Яворовская Ниагара
-                            </a>
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Экскурсия</a>
                         </h5>
-                        <p class="">Читай полностью описание и бронируй!</p>
+                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Апреля - 03 Мая</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>4 Дня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>16 Мая</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Яворовская Ниагара -->
+                <!--  //Зоопарк Пылышенко -->
 
-                <!--  Золотые прииски   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                <!--  Пиво -->
+                <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-gold-mines.html">
-                            <img src="images/golds-mines-min.jpg" alt="Золотые прииски" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Beer.html">
+                            <img src="images/beer-mini.jpg" alt="Beer" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>2700грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-gold-mines.html">
-                                Золотые прииски Закарпатья
+                            <a href="https://novipovorot.pp.ua/page-Beer.html">
+                                Натуральное пиво
                             </a>
                         </h5>
-                        <p class="">Экскурсия в Закарпатье с Новым поворотом </p>
+                        <p class="">
+                            Экскурсия и дегустация в частной пивоварне
+                        </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 1-3 мая и 8-10 мая </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>15 Мая</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Золотые прииски -->
+                <!--  //Пиво -->
 
-                <!--  Львов   -->
-                <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+                <!-- Сырная ферма и Пасека -->
+                <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html">
-                            <img src="images/Lviv-for-weekend-min.jpg" alt="Львов" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-cheese-farm.html">
+                            <img src="images/cheese-farm-min.jpg" alt="Cheese-farm" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>850грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>390грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Львов, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html">
-                                Львов на выходные
-                            </a>
+                            <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
                         </h5>
-                        <p class="">Читай описание до конца и бронируй! </p>
+                        <p class="">
+                            Самая вкусная экскурсия
+                        </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Каждые выходные </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>30 Мая</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Львов -->
+                <!-- //Сырная ферма и Пасека -->
 
             </div>
             <div class="view-package text-center mt-4">
