--- a/about.html
+++ b/about.html
@@ -386,17 +386,26 @@
     <!-- //copyright -->
 
     <!-- move top -->
-    <div class="move-top text-right">
+     <div>
+        <a class="top-link hide" href="" id="js-top">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6">
+                <path d="M12 6H0l6-6z"></path>
+            </svg>
+            <span class="screen-reader-text">Back to top</span>
+        </a>
+    </div>
+   <!-- <div class="move-top text-right">
         <a href="#home" class="move-top">
             <span class="fa fa-angle-up  mb-3" aria-hidden="true"></span>
         </a>
-    </div>
+    </div>-->
     <!-- move top -->
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
+    
+    <script src="./scripts/scriptSmoothScrolling.js"></script>
     <!-- owl-carousel -->
     <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
     <script>
