--- a/about.html
+++ b/about.html
@@ -37,6 +37,7 @@
 
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
+    <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
 
     <!-- owl-carousel -->
     <link href="./libs/owl-carousel/owl.carousel.min.css" rel="stylesheet" type='text/css' />
