--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="images/novi-povorot.jpg">
     <!--End Open Graph data-->
 
-    <script>
+    <!--<script>
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
         }, false);
@@ -26,7 +26,7 @@
         function hideURLbar() {
             window.scrollTo(0, 1);
         }
-    </script>
+    </script>-->
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
     <!--//favicon.ico-->
