--- a/about.html
+++ b/about.html
@@ -406,7 +406,34 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
    
-    <script src="./scripts/scriptSmoothScrolling.js"></script>
+    <!--<script src="./scripts/scriptSmoothScrolling.js"></script>-->
+     <script>
+        const scrollToTopButton = document.getElementById('js-top');
+        const scrollFunc = () => {
+            let y = window.scrollY;
+            if (y > 0) {
+                scrollToTopButton.className = "top-link show";
+            } else {
+                scrollToTopButton.className = "top-link hide";
+            }
+        };
+
+        window.addEventListener("scroll", scrollFunc);
+
+        const scrollToTop = () => {
+            const c = document.documentElement.scrollTop || document.body.scrollTop;
+            if (c > 0) {
+                window.requestAnimationFrame(scrollToTop);
+                window.scrollTo(0, c - c / 5);
+            }
+        };
+
+        scrollToTopButton.onclick = function (e) {
+            e.preventDefault();
+            scrollToTop();
+        }
+    </script>
+    
     <!-- owl-carousel -->
     <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
     <script>
