--- a/about.html
+++ b/about.html
@@ -406,8 +406,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
    
-    <!--<script src="./scripts/scriptSmoothScrolling.js"></script>-->
-     <script>
+    <script src="./scripts/scriptSmoothScrolling.js"></script>
+    <!-- <script>
         const scrollToTopButton = document.getElementById('js-top');
         const scrollFunc = () => {
             let y = window.scrollY;
@@ -432,7 +432,7 @@
             e.preventDefault();
             scrollToTop();
         }
-    </script>
+    </script>-->
     
     <!-- owl-carousel -->
     <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
