--- a/contact.html
+++ b/contact.html
@@ -17,15 +17,8 @@
     <meta property="og:url" content="https://novipovorot.pp.ua/contact.html" />
     <meta property="og:image" content="images/novi-povorot.jpg">
     <!--End Open Graph data-->
-    <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script>
+    
+     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
 
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
@@ -311,12 +304,18 @@
     <!-- //copyright -->
 
     <!-- move top -->
-    <div class="move-top text-right">
-        <a href="#home" class="move-top">
-            <span class="fa fa-angle-up  mb-3" aria-hidden="true"></span>
+    <div>
+        <a class="top-link hide" href="" id="js-top">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6">
+                <path d="M12 6H0l6-6z"></path>
+            </svg>
+            <span class="screen-reader-text">Back to top</span>
         </a>
     </div>
+
+    <script src="./scripts/scriptSmoothScrolling.js"></script>
     <!-- move top -->
+    
     <script>
         console.log("Туры выходного дня 'Новый Поворот'");
     </script>
