--- a/packages-page-two.html
+++ b/packages-page-two.html
@@ -16,16 +16,7 @@
     <meta property="og:url" content="https://novipovorot.pp.ua/packages.html"/>
     <meta property="og:image" content="images/novi-povorot.jpg">
     <!--End Open Graph data-->
-    <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script>
-
+    <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
     <!--//favicon.ico-->
@@ -121,217 +112,143 @@
             <h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Путешествия</h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             <div class="row">
-              <!--  Грузия -->
-    <!--  <div class="col-lg-3 col-sm-6 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-Georgia.html">
-                <img src="images/Georgia-min.jpg" alt="Georgia" class="img-fluid" />
-            </a>
-            <p><span class="fa fa-tags"></span> <span>200</span><span class="fa fa-usd"></span></p>
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Грузия</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-Georgia.html"> Походы по Грузии</a>
-            </h5>
-            <p class="">Расписание походов по Грузии...</p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>9 Дней</span></li>
-            </ul>
-        </div>
-    </div> -->
-    <!--  //Грузия  -->
+              
+	    <!--  TikTok -->
+	    <div class="col-lg-3 col-sm-6 mb-5">
+		<div class="image-tour position-relative">
+		    <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+			<img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
+		    </a>
+		    <!-- <p><span class="fa fa-tags"></span> <span>215грн.</span></p> -->
+		</div>
+		<div class="package-info">
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h5 class="my-2">
+			<a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
+			    Tik Tok pati
+			</a>
+		    </h5>
+		    <p class="">
+			Праздник и мастер класс с Новым поворотом
+		    </p>
+		    <ul class="listing mt-3">
+			<li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
+			<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+		    </ul>
+		</div>
+	    </div>
+	    <!--  //TikTok-->
 
-    <!--  Стамбул -->
-    <!--  <div class="col-lg-3 col-sm-6 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-Stambul.html">
-                <img src="images/Stambul-mini.jpg" alt="Stambul" class="img-fluid" />
-            </a>
-            <p><span class="fa fa-tags"></span> <span>250</span><span class="fa fa-eur"></span> </p>
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул, Турция.</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-Stambul.html">
-                    Стамбул
-                </a>
-            </h5>
-            <p class="">
-                Фестиваль тюльпанов и экскурсия в Стамбуле...
-            </p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20-27 Апреля 2021 Года</span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
-            </ul>
-        </div>
-    </div> -->
-    <!--  //Стамбул  -->
-
-    <!--  Кофе -->
-    <!--  <div class="col-lg-3 col-sm-6 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
-                <img src="images/cofe-mini.jpg" alt="Beer" class="img-fluid" />
-            </a> -->
-    <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
-    <!-- </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
-                    Кофе Isla
-                </a>
-            </h5>
-            <p class="">
-                50 оттенков кофе Isla. Экскурсия и дегустация...
-            </p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-            </ul>
-        </div>
-    </div> -->
-    <!--  //Кофе -->
-
-    <!--  TikTok -->
-    <div class="col-lg-3 col-sm-6 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                <img src="images/TicToc-mini.jpg" alt="LOL" class="img-fluid" />
-            </a>
-            <!-- <p><span class="fa fa-tags"></span> <span>215грн.</span></p> -->
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-TicToc-pati.html">
-                    Tik Tok pati
-                </a>
-            </h5>
-            <p class="">
-                Праздник и мастер класс с Новым поворотом
-            </p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-            </ul>
-        </div>
-    </div>
-    <!--  //TikTok-->
-
-    <!--  8 марта  -->
-    <div class="col-lg-3 col-sm-6 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-eight-march.html">
-                <img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
-            </a>
-            <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-eight-march.html">
-                    Букет к 8 марта
-                </a>
-            </h5>
-            <p class="">Оригинальный подарок своими руками к 8 марта!</p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-            </ul>
-        </div>
-    </div>
-    <!--  //8 марта  -->
+	    <!--  8 марта  -->
+	    <div class="col-lg-3 col-sm-6 mb-5">
+		<div class="image-tour position-relative">
+		    <a href="https://novipovorot.pp.ua/page-eight-march.html">
+			<img src="images/eight-march-mini.jpg" alt="eight-march" class="img-fluid" />
+		    </a>
+		    <!--  <p><span class="fa fa-tags"></span> <span>195грн.</span></p> -->
+		</div>
+		<div class="package-info">
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h5 class="my-2">
+			<a href="https://novipovorot.pp.ua/page-eight-march.html">
+			    Букет к 8 марта
+			</a>
+		    </h5>
+		    <p class="">Оригинальный подарок своими руками к 8 марта!</p>
+		    <ul class="listing mt-3">
+			<li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+			<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+		    </ul>
+		</div>
+	    </div>
+	    <!--  //8 марта  -->
 
 
-    <!--  Одесса -->
-    <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
-                <img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
-            </a>
-            <!-- <p><span class="fa fa-tags"></span> <span>2100грн.</span></p> -->
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
-            <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
-            <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
-            </ul>
-        </div>
-    </div>
-    <!--  //Одесса  -->
+	    <!--  Одесса -->
+	    <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+		<div class="image-tour position-relative">
+		    <a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">
+			<img src="images/Odessa-mini.jpg" alt="Odessa" class="img-fluid" />
+		    </a>
+		    <!-- <p><span class="fa fa-tags"></span> <span>2100грн.</span></p> -->
+		</div>
+		<div class="package-info">
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Одесса, Украина.</h6>
+		    <h5 class="my-2"><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html">Одесса</a></h5>
+		    <p class="">Одесса на 8 марта, юмор и колорит. Морской привет!</p>
+		    <ul class="listing mt-3">
+			<li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+			<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
+		    </ul>
+		</div>
+	    </div>
+	    <!--  //Одесса  -->
 
-    <!--  ЛОЛ -->
-    <div class="col-lg-3 col-sm-6 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-LOL.html">
-                <img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
-            </a>
-            <!-- <p><span class="fa fa-tags"></span> <span>180грн.</span></p>-->
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-LOL.html">
-                    Лол
-                </a>
-            </h5>
-            <p class="">Праздник в стиле Лол с любимыми персонажами!</p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-            </ul>
-        </div>
-    </div>
-    <!--  //ЛОЛ -->
+	    <!--  ЛОЛ -->
+	    <div class="col-lg-3 col-sm-6 mb-5">
+		<div class="image-tour position-relative">
+		    <a href="https://novipovorot.pp.ua/page-LOL.html">
+			<img src="images/lol-mini.jpg" alt="LOL" class="img-fluid" />
+		    </a>
+		    <!-- <p><span class="fa fa-tags"></span> <span>180грн.</span></p>-->
+		</div>
+		<div class="package-info">
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h5 class="my-2">
+			<a href="https://novipovorot.pp.ua/page-LOL.html">
+			    Лол
+			</a>
+		    </h5>
+		    <p class="">Праздник в стиле Лол с любимыми персонажами!</p>
+		    <ul class="listing mt-3">
+			<li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span></li>
+			<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+		    </ul>
+		</div>
+	    </div>
+	    <!--  //ЛОЛ -->
 
-    <!--  Лимонарий   -->
-    <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
-        <div class="image-tour position-relative">
-            <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                <img src="images/Limonariy-mini.jpg" alt="Limonariy" class="img-fluid" />
-            </a>
-            <!-- <p><span class="fa fa-tags"></span> <span>150грн.</span></p> -->
-        </div>
-        <div class="package-info">
-            <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
-            <h5 class="my-2">
-                <a href="https://novipovorot.pp.ua/page-Limonariy.html">
-                    Лимонарий
-                </a>
-            </h5>
-            <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
-            <ul class="listing mt-3">
-                <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span></li>
-                <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
-            </ul>
-        </div>
-    </div>
-    <!--  //Лимонарий -->
-            </div>
+	    <!--  Лимонарий   -->
+	    <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
+		<div class="image-tour position-relative">
+		    <a href="https://novipovorot.pp.ua/page-Limonariy.html">
+			<img src="images/Limonariy-mini.jpg" alt="Limonariy" class="img-fluid" />
+		    </a>
+		    <!-- <p><span class="fa fa-tags"></span> <span>150грн.</span></p> -->
+		</div>
+		<div class="package-info">
+		    <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+		    <h5 class="my-2">
+			<a href="https://novipovorot.pp.ua/page-Limonariy.html">
+			    Лимонарий
+			</a>
+		    </h5>
+		    <p class="">Экскурсия в Лимонный сад с Новым поворотом </p>
+		    <ul class="listing mt-3">
+			<li><span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span></li>
+			<li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+		    </ul>
+		</div>
+	    </div>
+	    <!--  //Лимонарий -->
+		    </div>
 
-         <!-- Pagination -->
-         <div class="col-lg-8 col-xl-9 mx-auto">
-         <nav aria-label="..." class="d-flex justify-content-center">
-            <ul class="pagination pagination-lg">    
-              <li class="page-item"><a class="page-link" href="packages.html">1</a></li>
-              <li class="page-item active" aria-current="page">
-                <span class="page-link">2</span>
-              </li>
-            </ul>
-         </nav>
-         </div>
-         <!-- //Pagination -->
+		 <!-- Pagination -->
+		 <div class="col-lg-8 col-xl-9 mx-auto">
+		 <nav aria-label="..." class="d-flex justify-content-center">
+		    <ul class="pagination pagination-lg">    
+		      <li class="page-item"><a class="page-link" href="packages.html">1</a></li>
+		      <li class="page-item active" aria-current="page">
+			<span class="page-link">2</span>
+		      </li>
+		    </ul>
+		 </nav>
+		 </div>
+		 <!-- //Pagination -->
 
-        </div>
-    </section>
-    <!-- Туры -->
-
+		</div>
+	    </section>
+	    <!-- Туры -->
 
     <!--  Популярные Направления -->
 
@@ -566,11 +483,16 @@
     <!-- //copyright -->
 
     <!-- move top -->
-    <div class="move-top text-right">
-        <a href="#home" class="move-top">
-            <span class="fa fa-angle-up  mb-3" aria-hidden="true"></span>
+    <div>
+        <a class="top-link hide" href="" id="js-top">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6">
+                <path d="M12 6H0l6-6z"></path>
+            </svg>
+            <span class="screen-reader-text">Back to top</span>
         </a>
     </div>
+
+    <script src="./scripts/scriptSmoothScrolling.js"></script>
     <!-- move top -->
 
     <!-- jQuery CDN -->
