--- a/page-cofe-Isla.html
+++ b/page-cofe-Isla.html
@@ -16,15 +16,7 @@
     <meta property="og:image" content="images/cofe-max.jpg">
     <!--End Open Graph data-->
 
-    <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script>
+    <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
 
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
@@ -366,11 +358,16 @@
     <!-- //copyright -->
 
     <!-- move top -->
-    <div class="move-top text-right">
-        <a href="#home" class="move-top">
-            <span class="fa fa-angle-up  mb-3" aria-hidden="true"></span>
+    <div>
+        <a class="top-link hide" href="" id="js-top">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6">
+                <path d="M12 6H0l6-6z"></path>
+            </svg>
+            <span class="screen-reader-text">Back to top</span>
         </a>
-    </div>
+     </div>
+
+     <script src="./scripts/scriptSmoothScrolling.js"></script>
     <!-- move top -->
 	
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
