--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -137,7 +137,7 @@
                             пещеры в которых жили монахи и целебный горный родник!
                          </p>
                         
-                        <div id="MoreDetails" style="display:none">
+                        <div id="MoreDetails" style="display: none; cursor: pointer;">
                          <p class="txt-alg-jf">
                             Мы не только побываем в этих прекрасных местах, 
                             но и услышим их поразительные истории и сокровенные тайны
