--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -161,7 +161,7 @@
                          </p>
                        </div>
                        <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
-                           class="text-primary font-weight-bold">
+                           class="text-primary font-weight-bold txt-alg-jf">
                           ПОДРОБНЕЕ...
                        </p>
                         
