--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -137,7 +137,7 @@
                             пещеры в которых жили монахи и целебный горный родник!
                          </p>
                         
-                        <div id="MoreDetails" style="display: none; cursor: pointer;">
+                        <div id="MoreDetails" style="display: none;">
                          <p class="txt-alg-jf">
                             Мы не только побываем в этих прекрасных местах, 
                             но и услышим их поразительные истории и сокровенные тайны
@@ -161,7 +161,7 @@
                          </p>
                        </div>
                        <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
-                           class="text-primary font-weight-bold txt-alg-jf">
+                           class="text-primary font-weight-bold txt-alg-jf"  style="cursor: pointer;">
                           ПОДРОБНЕЕ...
                        </p>
                         
