--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -113,7 +113,13 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>22-23 Мая 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span id="SocialDate">22-23 Мая 2021 Года</span>
+                                    <script>
+                                      let SocialDate = document.querySelector('SocialDate');
+                                         setInterval(function () {
+                                            SocialDate.classList.toggle('text-danger');
+                                        }, 1500
+                                    </script>
                                 </li>
                             </ul>
                         </div>
