--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -53,6 +53,11 @@
         src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
         /></noscript>-->
         <!-- End Facebook Pixel Code -->
+    <style>
+        .text-red {
+            color: red;
+        }
+    </style>
 </head>
   <body>
 
@@ -117,7 +122,7 @@
                                     <script>
                                       let SocialDate = document.querySelector('SocialDate');
                                          setInterval(function () {
-                                            SocialDate.classList.toggle('text-danger');
+                                            SocialDate.classList.toggle('text-red');
                                         }, 1500
                                     </script>
                                 </li>
