--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -605,9 +605,9 @@
     
     
     <script>
-      let dateOfTravel = document.querySelector('dateOfTravel');
+      let travel = document.querySelector('dateOfTravel');
          setInterval(function () {
-            dateOfTravel.classList.toggle('text-danger');
+            travel.classList.toggle('text-danger');
         }, 1500 )
     </script>
 </body>
