--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -605,7 +605,7 @@
     
     
     <script>
-      let travel = document.querySelector('dateOfTravel');
+      let travel = document.querySelector('.dateOfTravel');
          setInterval(function () {
             travel.classList.toggle('text-danger');
         }, 1500 )
