--- a/page-Beer.html
+++ b/page-Beer.html
@@ -189,7 +189,9 @@
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
                         </p>
-
+			<!-- Post Widget -->
+			<script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/328" data-width="100%"></script>
+			<!-- //Post Widget -->
                         <!-- Описание экскурсии -->
                         <div class="accordion mt-3 mb-3" id="accordionExample">
                             <div class="card">
