--- a/page-Beer.html
+++ b/page-Beer.html
@@ -190,7 +190,7 @@
                         </ul>
                         </p>
 			
-			<div class="w-100 d-flex flex-wrap align-content-start">
+			<div class="w-100 d-flex flex-wrap align-content-start ml-auto">
 			   <!-- Post Widget -->
 			   <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/328"
 			    data-width="100%"></script>
