--- a/page-Askania-Nova.html
+++ b/page-Askania-Nova.html
@@ -13,7 +13,10 @@
   <body>
     <h1>Аскания Нова | Новый Поворот</h1>
   <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/310" data-width="100%"></script>
-
+  <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/309" data-width="100%"></script>
+  <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/305" data-width="100%"></script>
+    
+    
     <!-- Bootstrap  JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
