--- a/page-Askania-Nova.html
+++ b/page-Askania-Nova.html
@@ -11,10 +11,11 @@
     <title>Аскания Нова | Новый Поворот</title>
   </head>
   <body>
-    <h1>Аскания Нова | Новый Поворот</h1>
+    <h1  class="text-center">Аскания Нова | Новый Поворот</h1>
+  <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/305" data-width="100%"></script>
   <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/310" data-width="100%"></script>
   <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/309" data-width="100%"></script>
-  <script async src="https://telegram.org/js/telegram-widget.js?14" data-telegram-post="novipovorot/305" data-width="100%"></script>
+ 
     
     
     <!-- Bootstrap  JS -->
