--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -40,24 +40,6 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-
-        <!-- Facebook Pixel Code -->
-       <!-- <script>
-          !function(f,b,e,v,n,t,s)
-          {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-          n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-          if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-          n.queue=[];t=b.createElement(e);t.async=!0;
-          t.src=v;s=b.getElementsByTagName(e)[0];
-          s.parentNode.insertBefore(t,s)}(window, document,'script',
-          'https://connect.facebook.net/en_US/fbevents.js');
-          fbq('init', '3921253151274858');
-          fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-        /></noscript>-->
-        <!-- End Facebook Pixel Code -->
 </head>
   <body>
 
@@ -157,10 +139,10 @@
                             
                             <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
                             <span class="txt-alg-jf">
-                             Цена билета до 8 апреля: 390 грн. от 6 до 200 лет, 375 грн. 4-10 лет, до 
-                             4-х лет бесплатно (без предоставления отдельного места в транспорте).
-                             С 9 апреля 420 грн. - взрослые, 395 грн. - дети.
-                             Предоплата по брони 50% от стоимости.
+                                Цена билета до <strong>19 мая:</strong> 390 грн. от 6 до 200 лет, 375 грн. 4-10 лет, до 
+                                4-х лет бесплатно (без предоставления отдельного места в транспорте).<br>
+                                С <strong>20 мая</strong>  420 грн. - взрослые, 395 грн. - дети.<br>
+                                Предоплата по брони 50% от стоимости.
                             </span>
                         </div>
                         
