--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -114,23 +114,33 @@
                         <p class="txt-alg-jf">
                             Вытяжные сыры, сыры с плесенью, крапивой и в виде груши. Вы такого еще не 
                             видели и не пробовали! Сыры с Запорожской душой и поразительными
-                            вкусами от любителя до гурмана! Мы увидим милых козочек,
+                            вкусами от любителя до гурмана! 
+                        </p>
+                        
+                         <div id="MoreDetails" style="display: none;">
+                         <p class="txt-alg-jf">
+                            Мы увидим милых козочек,
                             которых уже больше 70ти голов и забавного ослика Кешу помощника в заготовке сена!
                             Узнаем секреты изготовления твердых и мягких сыров, а еще попробуем 
                             свежее козье молочко и вкуснейший йогурт.
-                        </p>
-                        <p class="txt-alg-jf">
+                         </p>
+                         <p class="txt-alg-jf">
                             Наступила весна и проснулись трудяжки пчелки, поедем проведать их и 
                             угоститься медком. Мы побываем в роли настоящего пасечника примерив на 
                             себя защитный костюм, попробуем вкуснейшие соты (забрус) и узнаем истории 
                             пасеки и пчелок!
-                        </p>
-                        <p class="p-2 bg-warning text-white txt-alg-jf">
-                         ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ И НЕ ПРОБОВАЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ!
-                         КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
-                         Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 10 
-                         человек, 11 едет бесплатно )
-                        </p>
+                         </p>
+                         <p class="p-2 bg-warning text-white txt-alg-jf">
+                             ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ И НЕ ПРОБОВАЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ!
+                             КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+                             Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 10 
+                             человек, 11 едет бесплатно )
+                         </p>
+                       </div>
+                       <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
+                           class="text-primary font-weight-bold txt-alg-jf"  style="cursor: pointer;">
+                          ПОДРОБНЕЕ...
+                       </p>
                         <hr>
                        
                         <!-- Alert info -->
