--- a/index.html
+++ b/index.html
@@ -589,20 +589,27 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html"
-                                        class="scroll">Одесса</a>
-                                </li>
-                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
-                                </li>
+                                <li><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-gold-mines.html" class="scroll">Золотые Прииски Закарпатья</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html" class="scroll">Львов На Выходные</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк Пылышенко - Замок Попова - Панское озеро</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-cheese-farm.html" class="scroll">Сырная Ферма И Пасека</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-wine.html" class="scroll">Вино</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>                             
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a>
-                                </li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Грузия</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-cofe-Isla.html" class="scroll">50 Оттенков Кофе Isla</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-TicToc-pati.html" class="scroll">Tik Tok Pati</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
-                                </li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>
                             </ul>
                         </div>
                     </div>
