--- a/index.html
+++ b/index.html
@@ -589,7 +589,8 @@
                         </div>
                         <div class="row">
                             <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
+                                <!-- Места для путешествий колонка 1-->
+                                <li id="PlacesToTravelColOne"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
@@ -601,7 +602,8 @@
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>                             
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
+                                <!-- Места для путешествий колонка 2-->
+                                <li id="PlacesToTravelColTwo"><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Грузия</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-cofe-Isla.html" class="scroll">50 Оттенков Кофе Isla</a></li>
