--- a/index.html
+++ b/index.html
@@ -596,12 +596,12 @@
                                 <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-gold-mines.html" class="scroll">Золотые Прииски Закарпатья</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html" class="scroll">Львов На Выходные</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк Пылышенко - Замок Попова - Панское озеро</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк Пылышенко</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-cheese-farm.html" class="scroll">Сырная Ферма И Пасека</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-wine.html" class="scroll">Вино</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>                             
-                            </ul>
-                           <!-- <ul class="col-6 links">-->
+                           <!-- </ul>
+                            <ul class="col-6 links">-->
                                 
                                 <li id="PlacesToTravelColTwo"><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Грузия</a></li>
@@ -612,7 +612,7 @@
                                 <li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a></li>
-                            <!--</ul>-->
+                            </ul>
                         </div>
                     </div>
 
