--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                             <h3>Места для путешествий</h3>
                         </div>
                         <div class="row">
-                            <ul class="col-6 links">
+                            <ul class="col links">
                                 <!-- Места для путешествий колонка 1-->
                                 <li id="PlacesToTravelColOne"><a href="https://novipovorot.pp.ua/page-balloon-festival.html" class="scroll">Фестиваль Воздушных Шаров</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
